[package]
name = "rust-meet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.52", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "tcp",
    "yamux",
    "macros",
] }
nokhwa = { version = "0.10", features = ["input-msmf", "output-threaded"] }
cpal = "0.15"
image = "0.25"
fast_image_resize = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }
